--- a/RIOT_app/pkg_semtech-loramac/station2/Makefile
+++ b/RIOT_app/pkg_semtech-loramac/station2/Makefile
@@ -10,6 +10,7 @@ USEMODULE += $(LORA_DRIVER)
 USEMODULE += shell
 USEMODULE += shell_commands
 USEMODULE += fmt
+USEMODULE += xtimer
 
 FEATURES_OPTIONAL += periph_eeprom
 
