add assignment4 code

--- a/broker&bridge/mosquitto.rsmb/rsmb/src/config (copia).conf
+++ b/broker&bridge/mosquitto.rsmb/rsmb/src/config (copia).conf
@@ -2,7 +2,7 @@
 trace_output protocol
 
 # listen for MQTT-SN traffic on UDP port 1885
-listener 8080 INADDR_ANY websocket
+listener 1885 INADDR_ANY mqtts
   ipv6 true
 
 # listen to MQTT connections on tcp port 1884
